# zsync-windows

c/: CMakeLists.txt  base64.c  client.c  config.h.cmake  format_string.h  http.c  make.c  makegz.c  msvc-getopt.c  msvc-getopt.h  pack.h  url.c  url.h  win32.c  win32.h  zsglobal.h
c/cmake/: CheckLargeFileSupport.cmake  FindDmalloc.cmake  h_errno_check  h_errno_check.c  h_errno_check.c~  in_port_t_size.c  pure.c
c/dummy/: CMakeLists.txt
c/librcksum/: CMakeLists.txt  hash.c  internal.h  md4.h  range.c  rcksum.h  rsum.c  state.c
c/libzsync/: CMakeLists.txt  sha1.c  sha1.h  zmap.c  zmap.h  zsync.c  zsync.h
c/zlib/: CMakeLists.txt
